prevent page from squishing

--- a/static/less/styles.less
+++ b/static/less/styles.less
@@ -11,6 +11,7 @@
 
 html, body {
   width: 100%;
+  min-width: 1080px;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -77,6 +78,7 @@ html, body {
 
 #container {
   width: 100%;
+  min-width: 1080px;
   margin: auto;
   border: 0;
 }
@@ -139,6 +141,7 @@ html, body {
 #game-container {
   position: relative;
   width: 800px;
+  min-width: 800px;
   height: 600px;
   padding-bottom: -4px;
   border-left-style: none;
